package hellgren.integration_segregation.classes;

public interface AthleteInterface {
    void compete();
}
