package hellgren.integration_segregation.classes;

public interface RunnerInterface extends AthleteInterface {
    void run();
}
