package hellgren.integration_segregation.classes;

public interface SwimmerInterface extends AthleteInterface {
    void swim();
}
