@startuml
class hellgren.integration_segregation.classes.Runner {
+ void compete()
+ void run()
}
interface hellgren.integration_segregation.classes.SwimmerInterface {
~ void swim()
}
interface hellgren.integration_segregation.classes.ToExtensiveAthleteInterface {
~ void compete()
~ void swim()
~ void run()
}
interface hellgren.integration_segregation.classes.AthleteInterface {
~ void compete()
}
interface hellgren.integration_segregation.classes.RunnerInterface {
~ void run()
}
class hellgren.integration_segregation.classes.Swimmer {
+ void compete()
+ void swim()
}


hellgren.integration_segregation.classes.RunnerInterface <|.. hellgren.integration_segregation.classes.Runner
hellgren.integration_segregation.classes.AthleteInterface <|-- hellgren.integration_segregation.classes.SwimmerInterface
hellgren.integration_segregation.classes.AthleteInterface <|-- hellgren.integration_segregation.classes.RunnerInterface
hellgren.integration_segregation.classes.SwimmerInterface <|.. hellgren.integration_segregation.classes.Swimmer
@enduml